@startuml
skinparam dpi 300
'skinparam linetype ortho
skinparam shadowing false
top to bottom direction

abstract class Statistic {}
abstract class Source {}
abstract class Updateable {}
abstract class UpdateableCollection {}
note bottom
 This will contain only
 <i>Systematic</i> objects.
end note

abstract class TwoPoint {
  - update_(...)
  + {abstract} read(data : sacc.Sacc)
  - {abstract} _update_params(params)
  + {abstract} compute(cosmo: pyccl.Cosmology, params: Dict)
}

TwoPoint -up-|> Updateable
TwoPoint -up-|> Statistic

TwoPoint *--down- Source : s1
TwoPoint *--down- Source : s2
TwoPoint *--down- UpdateableCollection : systematics

class ConcreteTPF {
 - update_(...)
}
 
ConcreteTPF -left-|> TwoPoint 

@enduml